# anyml

./: .gitignore  Cargo.toml  LICENSE.md  README.md
crates/anyai_ollama/: Cargo.toml  README.md
crates/anyai_ollama/examples/: example.rs
crates/anyai_ollama/src/: lib.rs
crates/anyml_anthropic/: Cargo.toml  README.md
crates/anyml_anthropic/examples/: anthropic_chat.rs  anthropic_list_models.rs  example.rs
crates/anyml_anthropic/src/: chat.rs  lib.rs  list_models.rs
crates/anyml_claude_agents_sdk/: Cargo.toml
crates/anyml_claude_agents_sdk/examples/: claude_agents_chat.rs
crates/anyml_claude_agents_sdk/src/: chat.rs  lib.rs  list_models.rs
crates/anyml_claude_sdk/: Cargo.toml
crates/anyml_claude_sdk/examples/: claude_chat.rs
crates/anyml_claude_sdk/src/: chat.rs  lib.rs  list_models.rs
crates/anyml_core/: Cargo.toml
crates/anyml_core/src/: chat.rs  json.rs  lib.rs  message.rs
crates/anyml_core/src/models/: message.rs  mod.rs  model.rs
crates/anyml_core/src/providers/: chat.rs  list_models.rs  mod.rs
crates/anyml_macros/: Cargo.toml
crates/anyml_macros/src/: lib.rs
crates/anyml_ollama/: Cargo.toml  README.md
crates/anyml_ollama/examples/: example.rs  ollama_chat.rs  ollama_list_models.rs
crates/anyml_ollama/src/: chat.rs  lib.rs  list_models.rs
crates/anyml_openai/: Cargo.toml  README.md
crates/anyml_openai/examples/: example.rs  openai_chat.rs  openai_list_models.rs
crates/anyml_openai/src/: chat.rs  lib.rs  list_models.rs
crates/claude_agents_sdk/: Cargo.toml
crates/claude_agents_sdk/src/: lib.rs  session.rs  transport.rs  types.rs
crates/claude_agents_sdk/tests/: integration.rs
crates/claude_sdk/: Cargo.toml
crates/claude_sdk/src/: install.rs  lib.rs  session.rs  transport.rs
crates/claude_sdk/tests/: integration.rs
crates/claude_sdk/tests/fixtures/: fake_cli.sh
examples/: example.rs
src/: chat.rs  lib.rs  message.rs
