[package]
name = "anyml"
version = "0.0.0"
edition = "2024"

[dependencies]
anyml_core = { path = "./crates/anyml_core" }
anyml_anthropic = { path = "./crates/anyml_anthropic", optional = true }
anyml_ollama = { path = "./crates/anyml_ollama", optional = true }
anyml_openai = { path = "./crates/anyml_openai", optional = true }

[dev-dependencies]
anyml = { git = "https://github.com/astrum-chat/anyml", features = ["anthropic"] }
# Local development.
# anyml = { path = ".", features = ["anthropic"] }

tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.24", features = ["stream"] }
anyhttp_reqwest = { git = "https://github.com/quaero-search/anyhttp", features = [ "stream" ] }
dotenvy = "0.15"
anyhow = "1.0.100"
futures = "0.3.31"

[features]
default = []
full = ["anthropic", "ollama", "openai"]
anthropic = ["dep:anyml_anthropic"]
ollama = ["dep:anyml_ollama"]
openai = ["dep:anyml_openai"]


[workspace]
members = [
    "crates/anyml_ollama",
    "crates/anyml_anthropic",
    "crates/anyml_openai",
    "crates/anyml_core"
]
