[package]
name = "anyml"
version = "0.0.0"
edition = "2024"
description = "Light-weight machine learning crate."
license = "MIT"
homepage = "https://github.com/astrum-chat/anyml"

[dependencies]
# Local development.
# anyml_core = { path = "./crates/anyml_core" }
# anyml_anthropic = { path = "./crates/anyml_anthropic", optional = true }
# anyml_ollama = { path = "./crates/anyml_ollama", optional = true }
# anyml_openai = { path = "./crates/anyml_openai", optional = true }
anyml_core = { git = "https://github.com/astrum-chat/anyml" }
anyml_anthropic = { git = "https://github.com/astrum-chat/anyml", optional = true }
anyml_ollama = { git = "https://github.com/astrum-chat/anyml", optional = true }
anyml_openai = { git = "https://github.com/astrum-chat/anyml", optional = true }

[[example]]
name = "example"
required-features = ["anthropic"]

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.24", features = ["stream"] }
anyhttp = { git = "https://github.com/quaero-search/anyhttp", features = ["reqwest", "stream"] }
dotenvy = "0.15"
anyhow = "1.0.100"

[features]
default = []
full = ["anthropic", "ollama", "openai"]
anthropic = ["dep:anyml_anthropic"]
ollama = ["dep:anyml_ollama"]
openai = ["dep:anyml_openai"]

[workspace]
members = [
    "crates/anyml_ollama",
    "crates/anyml_anthropic",
    "crates/anyml_openai",
    "crates/anyml_core"
]

[patch.crates-io]
anyhttp = { git = "https://github.com/quaero-search/anyhttp" }
