[package]
name = "anyai_ollama"
version = "0.0.0"
edition = "2024"

[dependencies]
anyai = { path = "../../" }
async-trait = "0.1.89"
anyhttp = { path = "/Volumes/T7/anyhttp" }
http = "1.3.1"
serde_json = "1.0.145"
futures = "0.3.31"
anyhow = "1.0.100"

[dev-dependencies]
reqwest = { version = "0.12.24", features = ["stream"] }
tokio = { version = "1.48.0", features = ["full"] }
