[package]
name = "anyai_ollama"
version = "0.0.0"
edition = "2024"

[dependencies]
anyai = { git = "https://github.com/astrum-chat/anyai" }
# local development.
# anyai = { path = "../../" }

async-trait = "0.1.89"
anyhttp = { git = "https://github.com/quaero-search/anyhttp", features = [ "stream" ] }
http = "1.3.1"
serde_json = "1.0.145"
futures = "0.3.31"
anyhow = "1.0.100"

[dev-dependencies]
reqwest = { version = "0.12.24", features = ["stream"] }
tokio = { version = "1.48.0", features = ["full"] }
anyhttp_reqwest = { git = "https://github.com/quaero-search/anyhttp", features = [ "stream" ] }
