[package]
name = "anyml_claude_agents_sdk"
version = "0.0.0"
edition = "2024"
license = "MIT"

[dependencies]
anyml_core.workspace = true
claude_agents_sdk.workspace = true
async-trait = "0.1"
futures = "0.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
secrecy = "0.10.3"

[dev-dependencies]
tokio = { version = "1.48.0", features = ["full"] }
dotenvy = "0.15"
which = "7"

[[example]]
name = "claude_agents_chat"
