[package]
name = "anyml_core"
version = "0.0.0"
edition = "2024"
description = "Light-weight machine learning crate."
license = "MIT"
homepage = "https://github.com/astrum-chat/anyml"

[dependencies]
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["raw_value"] }
futures = "0.3.31"
thiserror = "2.0.17"
anyhow = "1.0.100"
phf = { version = "0.13.1", features = ["macros"] }
