[package]
name = "anyml_ollama"
version = "0.0.0"
edition = "2024"
description = "Light-weight machine learning crate."
license = "MIT"
homepage = "https://github.com/astrum-chat/anyml"

[dependencies]
anyml_core.workspace = true
anyml_macros.workspace = true

async-trait = "0.1.89"
anyhttp = { version = "0.0.0", features = ["stream"] }
http = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
futures = "0.3.31"
anyhow = "1.0.100"
bytes = "1.11.0"

[dev-dependencies]
reqwest = { version = "0.12.24", features = ["stream"] }
tokio = { version = "1.48.0", features = ["full"] }
anyhttp = { version = "0.0.0", features = ["test-support", "stream", "reqwest"] }
