[package]
name = "claude_agents_sdk"
version = "0.0.0"
edition = "2024"
description = "Async-runtime-agnostic Rust wrapper for the Claude Code CLI."
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
anyhow = "1.0"
thiserror = "2.0"
ureq = "3"
secrecy = "0.10.3"
sha2 = "0.10"
uuid = { version = "1", features = ["v4", "v5"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"

[dev-dependencies]
tempfile = "3"
